Fixed image container text width on mobile.

--- a/src/styles/Pictures.scss
+++ b/src/styles/Pictures.scss
@@ -49,7 +49,6 @@
 @media (max-width: 768px) {
     #pictures .pcontainer {
         margin-top: 50px;
-        position: relative;
     }
 
     #pictures .pcontainer .pimg img {
